fix variable interpretation

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -36,4 +36,4 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: ${GOLANGCI_LINT_VERSION}
+          version: "${{ env.GOLANGCI_LINT_VERSION }}"
