Apply suggestions from code review
Co-authored-by: Ludovic Fernandez <ldez@users.noreply.github.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,14 +23,6 @@ linters-settings:
       - github.com/imdario/mergo
   misspell:
     locale: US
-  mnd:
-    # List of enabled checks, see https://github.com/tommy-muehle/go-mnd/#checks for description.
-    checks:
-      - case
-      - condition
-      - operation
-      - return
-      - assign
   funlen:
     lines: -1
     statements: 80 # default 40
@@ -53,7 +45,10 @@ linters:
     - dupl
     - lll
     - nestif
+    - mnd
     - err113
+    - tagalign
+    - prealloc
     - wrapcheck
     - nlreturn
     - wsl
@@ -67,6 +62,7 @@ linters:
 
 issues:
   exclude-use-default: false
+  max-issues-per-linter: 0
   max-same-issues: 0
   exclude:
     - 'ST1000: at least one file in a package should have a package comment'
